Update to new url format, cleanup

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <a id="sidebar-closer" class="button sidebar-button"></a>
         <nav>
           <ul class="sidebar-link-group">
-            <li><a class="sidebar-link" href="wiki/index.php/Main_Page">Main Page</a></li>
-            <li><a class="sidebar-link" href="wiki/index.php/Special:RecentChanges">Recent Changes</a></li>
-            <li><a class="sidebar-link" href="wiki/index.php/Special:Random">Random Page</a></li>
+            <li><a class="sidebar-link" href="wiki/Main_Page">Main Page</a></li>
+            <li><a class="sidebar-link" href="wiki/Special:RecentChanges">Recent Changes</a></li>
+            <li><a class="sidebar-link" href="wiki/Special:Random">Random Page</a></li>
           </ul>
           <ul class="sidebar-link-group">
-            <li><a class="sidebar-link" href="wiki/index.php/BIONICLEsector01_talk:Articles_for_Creation">Articles for Creation</a></li>
-            <li><a class="sidebar-link" href="wiki/index.php/BIONICLEsector01_talk:Articles_for_Deletion">Articles for Deletion</a></li>
+            <li><a class="sidebar-link" href="wiki/BIONICLEsector01_talk:Articles_for_Creation">Articles for Creation</a></li>
+            <li><a class="sidebar-link" href="wiki/BIONICLEsector01_talk:Articles_for_Deletion">Articles for Deletion</a></li>
           </ul>
           <ul class="sidebar-link-group">
             <li><a class="sidebar-link" href="//chronistwiki.de/wiki/Chronist-Wiki:Hauptseite">Deutsch</a></li>
@@ -68,12 +68,12 @@
               <div id="search-suggestions"></div>
             </div>
             <button id="search-input-submit" class="search-element button search-button dark-blue-button" type="submit" title="Submit search"><img id="icon-search" class="search-button-icon" src="splash/img/icon-search.png" alt="Search"/></button>
-            <a id="search-input-random" class="search-element button search-button dark-blue-button" href="http://biosector01.com/wiki/index.php/Special:Random" title="Random article"><img id="icon-random" class="search-button-icon" src="splash/img/icon-random.png" alt="Random article" /></a>
+            <a id="search-input-random" class="search-element button search-button dark-blue-button" href="wiki/Special:Random" title="Random article"><img id="icon-random" class="search-button-icon" src="splash/img/icon-random.png" alt="Random article" /></a>
             <input type="hidden" name="search" value="1">
           </form>
         </section>
         <section id="section-explore">
-          <a id="explore-link" class="content-link" href="http://biosector01.com/wiki/index.php/BIONICLEsector01:About">Learn about <span id="explore-name">BS01 Wiki</span></a>
+          <a id="explore-link" class="content-link" href="wiki/BIONICLEsector01:About">Learn about <span id="explore-name">BS01 Wiki</span></a>
         </section>
         <section id="section-featured">
           <div id="featured-boxes">
