--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <span id="logo-description">The largest, most accurate LEGO BIONICLE reference in the world</span>
         </header>
         <section id="section-search">
-          <form id="search-form" action="search.php" method="get">
+          <form id="search-form" action="wiki/search.php" method="get">
             <div id="search-box-container">
               <input type="search" name="query" placeholder="Search" title="Search BS01 Wiki" id="search-input-query" class="search-element" autocomplete="off" autofocus="autofocus">
               <div id="search-suggestions"></div>
