Update shortlink style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="https://www.flickr.com/photos/43377110@N06/" class="social-link button" title="Wrecker of Doors on Flickr"><img class="social-image" src="splash/img/flickr.png" alt="BS01 on Flickr" /></a>
         </div>
         <div id="user-link-container">
-          <a id="user-link" class="button" href="wiki/index.php?title=Special:UserLogin" title="Log in or create an account">
+          <a id="user-link" class="button" href="wiki/Special:UserLogin" title="Log in or create an account">
             <span id="avatar-container">
               <img src="splash/img/avatar-anon.png" id="avatar" alt="avatar"/>
             </span>
