Change Twitter handle, style fix, cleanup
Change Twitter handle from BS01LUG to AskBS01
Fix search button style in Chrome (no more rounded corners)
Remove unused CSS file from old version of splash page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a id="sidebar-opener" class="button dark-blue-button sidebar-button"></a>
         <div id="header-social-links">
           <a href="https://www.facebook.com/BIONICLEsector01" class="social-link button" title="@BIONICLEsector01 on Facebook"><img class="social-image" src="splash/img/facebook.png" alt="@BIONICLEsector01 on Facebook" /></a>
-          <a href="https://twitter.com/BS01LUG" class="social-link button" title="@BS01LUG on Twitter"><img class="social-image" src="splash/img/twitter.png" alt="@BS01LUG on Twitter" /></a>
+          <a href="https://twitter.com/AskBS01" class="social-link button" title="@AskBS01 on Twitter"><img class="social-image" src="splash/img/twitter.png" alt="@AskBS01 on Twitter" /></a>
           <a href="https://www.youtube.com/channel/UCoeMPbSoTyCWrBTaasduYZg" class="social-link button" title="BIONICLEsector01 on YouTube"><img class="social-image" src="splash/img/youtube.png" alt="BIONICLEsector01 on YouTube" /></a>
           <a href="https://www.flickr.com/photos/43377110@N06/" class="social-link button" title="Wrecker of Doors on Flickr"><img class="social-image" src="splash/img/flickr.png" alt="BS01 on Flickr" /></a>
         </div>
@@ -89,7 +89,7 @@
             </a>
             <div id="featured-social" class="featured-box">
               <h2 class="featured-category">Twitter</h2>
-              <a class="twitter-timeline" data-height="285" data-dnt="true" data-theme="dark" data-link-color="#1A97AF" data-chrome="noheader nofooter transparent noborders" href="https://twitter.com/BS01LUG">Tweets by BS01LUG</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+              <a class="twitter-timeline" data-height="285" data-dnt="true" data-theme="dark" data-link-color="#1A97AF" data-chrome="noheader nofooter transparent noborders" href="https://twitter.com/AskBS01">Tweets by AskBS01</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <a id="link-right" class="featured-link">
               <div id="box-right" class="featured-box">
@@ -105,7 +105,7 @@
         </section>
         <section id="section-mobile-social-links">
           <a href="https://www.facebook.com/BIONICLEsector01" class="social-link button" title="@BIONICLEsector01 on Facebook"><img class="social-image" src="splash/img/facebook.png" alt="@BIONICLEsector01 on Facebook" /></a>
-          <a href="https://twitter.com/BS01LUG" class="social-link button" title="@BS01LUG on Twitter"><img class="social-image" src="splash/img/twitter.png" alt="@BS01LUG on Twitter" /></a>
+          <a href="https://twitter.com/AskBS01" class="social-link button" title="@AskBS01 on Twitter"><img class="social-image" src="splash/img/twitter.png" alt="@AskBS01 on Twitter" /></a>
           <a href="https://www.youtube.com/channel/UCoeMPbSoTyCWrBTaasduYZg" class="social-link button" title="BIONICLEsector01 on YouTube"><img class="social-image" src="splash/img/youtube.png" alt="BIONICLEsector01 on YouTube" /></a>
           <a href="https://www.flickr.com/photos/43377110@N06/" class="social-link button" title="Wrecker of Doors on Flickr"><img class="social-image" src="splash/img/flickr.png" alt="BS01 on Flickr" /></a>
         </section>
